--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,42 @@
   <head>
     <meta charset="utf-8">
     <title>Testing</title>
+    <link rel="icon" href="/images/Tower.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-    Setup works
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center">
+      <a class="navbar-brand" href="/">
+        <img src="/images/Tower.png" alt="Logo" style="width:40px;">
+      </a>
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/discord">Discord</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/staff">Staff</a>
+        </li>
+        <!-- Dropdown -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+            Leagues
+          </a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="/cscl">CSCL</a>
+            <a class="dropdown-item" href="/cdcl">CDCL</a>
+            <a class="dropdown-item" href="/twl">TWL</a>
+            <a class="dropdown-item" href="/sql">SQL</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Forums</a>
+        </li>
+      </ul>
+    </nav>
+
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
